--- a/flaskr/static/moodrating.css
+++ b/flaskr/static/moodrating.css
@@ -8,12 +8,15 @@ h3 {
     margin-top: 5px;
 }
 
+
 /*mood slider*/
+
 .choose_mood {
     width: 60%;
     margin: auto;
     text-align: center;
 }
+
 .mood_emoji {
     display: flex;
     width: 100%;
@@ -21,12 +24,14 @@ h3 {
     justify-content: space-between;
     margin-bottom: -15px;
 }
+
 .mood_emoji img {
     position: relative;
     justify-content: center;
     margin: auto;
     width: 30px;
 }
+
 .tickmarks {
     display: flex;
     width: 68%;
@@ -47,9 +52,11 @@ h3 {
     outline: none;
     opacity: 0.9;
 }
+
 .rate:hover {
     opacity: 1;
 }
+
 .rate::-webkit-slider-thumb {
     -webkit-appearance: none;
     height: 20px;
@@ -58,14 +65,18 @@ h3 {
     background-color: #C4C4C4;
 }
 
+
 /*journal entry*/
+
 .entrydetails {
     width: 90%;
     margin: auto;
     margin-bottom: 5vh;
     text-align: center;
 }
-.notes, .drawing {
+
+.notes,
+.drawing {
     background: linear-gradient(180deg, #FFFFFF 30.73%, #C4E2FF 100%);
     border: 1px solid #000000;
     box-sizing: border-box;
@@ -74,12 +85,14 @@ h3 {
     text-align: center;
     padding-bottom: 10px;
 }
+
 .notes textarea {
     width: 95%;
     resize: none;
     margin-bottom: 2%;
     border: 1px solid black;
 }
+
 .notes textarea:focus {
     border: 1px solid black;
 }
@@ -87,6 +100,7 @@ h3 {
 .save_btn {
     text-align: center;
 }
+
 button {
     padding: 7px 3vw;
     border-radius: 10px;
@@ -96,7 +110,6 @@ button {
     color: white;
     font-size: 20px;
 }
-
 
 @media only screen and (max-width: 450px) {
     h3 {
