--- a/flaskr/templates/moodrating.html
+++ b/flaskr/templates/moodrating.html
@@ -14,8 +14,8 @@
 
     <h3>What would you rate your mood today?</h3>
     <!-- <div class="space"></div> -->
-    <form action="/moodtracker.html" method="post">
-        <div class="choose_mood">
+    <form action="moodtracker.html" method="post">
+        <div class="choose_mood" style="background-color: red;">
             <div class="mood_emoji">
                 <img src="../static/img/sad.png" alt="sad">
                 <img src="../static/img/neutral.png" alt="neutral">
