--- a/flaskr/templates/moodtracker.html
+++ b/flaskr/templates/moodtracker.html
@@ -29,21 +29,22 @@
 
         <div class="journal">
             <div class="header">
-                <span>Journal Entries<img src="../static/img/plus.png" alt="add entry" class="add" width="2%"></span>
+                <span><p>Journal Entries</p>
+                <img src="../static/img/plus.png" alt="add entry" class="add"></span>
             </div>
             <div class="wrapper">
                 <div class="grid">
                     <div class="entry">
                         <div class="content">
-                            <p class="title">#2</p>
-                            <p>#1 content hereeeeeeeee</p>
+                            <p class="title">Entry Title</p>
+                            <p>Entry Content</p>
                         </div>
                         <div class="controls">
                             <img src="../static/img/edit.png" alt="edit entry" class="edit">
                             <img src="../static/img/trash.png" alt="trash" class="trash">
                         </div>
                     </div>
-                    <div class="entry">
+                    <!-- <div class="entry">
                         <div class="content">
                             <p class="title">#2</p>
                             <p>#2 content hereeeeeeeee</p>
@@ -62,7 +63,7 @@
                             <img src="../static/img/edit.png" alt="edit entry" class="edit">
                             <img src="../static/img/trash.png" alt="trash" class="trash">
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
