--- a/flaskr/static/mood.css
+++ b/flaskr/static/mood.css
@@ -1,37 +1,3 @@
-/* html, body {
-    background-image: url("img/bg.png");
-    background-attachment: fixed;
-    background-size: cover;
-}
-body {
-    padding: 10px 2vw;
-    font-family: 'Red Hat Display', sans-serif !important;
-}
-.navbar {
-    display: flex;
-    margin-bottom: 10px;
-}
-.navbar a {
-    color: white;
-    text-decoration: none;
-    display: inline-block;
-    font-family: 'Red Hat Display', sans-serif;
-    margin: 1vw 2vmax;
-    vertical-align: middle;
-    justify-content: center;
-    align-items: center;
-}
-.left {
-    flex: 1;
-    justify-content: center;
-    align-items: center;
-}
-.right {
-    display: inline;
-    float: right;
-    text-align: right;
-    margin: 0 auto;
-} */
 
 .datecal {
     text-align: center;
@@ -94,10 +60,20 @@ body {
     padding: 1vh 0;
     border-radius: 15px 15px 0 0;
 }
-.header img, .grid span img {
+.header img {
     float: right;
-    margin-right: 30px;
+    padding-right: 20px;
     width: 25px;
+}
+.header p, .header img {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0;
+}
+.header p {
+    /*calculation to make it centered. full width - width of img size and padding*/
+    width: calc(100% - 45px);
+    margin-right: -45px;
 }
 .wrapper {
     overflow-y: scroll;
