--- a/flaskr/static/moodrating.css
+++ b/flaskr/static/moodrating.css
@@ -75,8 +75,7 @@ h3 {
     text-align: center;
 }
 
-.notes,
-.drawing {
+.notes {
     background: linear-gradient(180deg, #FFFFFF 30.73%, #C4E2FF 100%);
     border: 1px solid #000000;
     box-sizing: border-box;
