--- a/flaskr/static/SignUpPage.css
+++ b/flaskr/static/SignUpPage.css
@@ -13,7 +13,7 @@ html, body {
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-div.navbar-nav {
+/* div.navbar-nav {
     display: flex;
     margin-bottom: 10px;
 }
@@ -57,40 +57,59 @@ div.center {
     line-height: 150px;
     font-family: 'Red Hat Display';
     font-size: xx-large;
+} */
+
+.signup_container {
+    background-color: #E8E8FF;
+    /* width: 40%; */
+    /* width: 50%; */
+    width: 80vmin;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    transform: translateY(10vh);
+    border: 1px solid black;
+    box-shadow: 15px 20px 20px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
 }
 
-input {
-    background-color: #A09EFF;
+.input {
+    background-color: #FFFFFF;
     border: none;
-    
-    height: 100px;
-    width: 650px;
-    margin-top: 40px;
-    margin-right: auto;
-    margin-left: auto;
-
-    text-align: center;
-    line-height: 100px;
+    width: 100%;
+    padding: 10px 0;
+    padding-left: 10px;
+    font-size: 15px;
     font-family: 'Red Hat Display';
-    font-size: xx-large;
+    /* display: block;
+    margin: 0 auto; */
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    border-radius: 10px;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
 }
 
 ::placeholder {
     color: #000000;
-    opacity: 0.7;
 }
 
-a:link {
-    color: #000000;
-    text-decoration: none;
+.center {
+    text-align: center;
+}
+.black_btn {
+    padding: 7px 3vw;
+    border-radius: 10px;
+    outline: none;
+    border: 0;
+    background: #200E32;
+    color: white;
+    font-size: 17px;
 }
 
-a:visited {
-    color: #000000;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #ffffff;
-    text-decoration: none;
+.indent {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 1vh;
 }
