--- a/flaskr/static/SignUpPage.css
+++ b/flaskr/static/SignUpPage.css
@@ -61,9 +61,7 @@ div.center {
 
 .signup_container {
     background-color: #E8E8FF;
-    /* width: 40%; */
-    /* width: 50%; */
-    width: 80vmin;
+    width: 50vw;
     display: block;
     margin: 0 auto;
     position: relative;
@@ -71,6 +69,11 @@ div.center {
     border: 1px solid black;
     box-shadow: 15px 20px 20px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
+    padding: 10px;
+}
+.close_btn {
+    width: 30px;
+    height: 30px;
 }
 
 .input {
@@ -108,8 +111,8 @@ div.center {
 }
 
 .indent {
-    width: 100%;
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 1vh;
+    padding: 2px 10px;
+}
+.italicize {
+    font-style: italic;
 }
