add jinja template to moodrand pages

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -32,6 +32,10 @@ html, body {
     margin: 0 auto;
 }
 
+.center {
+    text-align: center;
+}
+
 @media only screen and (max-width: 450px) {
     html, body {
         background-image: url("img/bg.png");
