add title to entries

--- a/flaskr/templates/moodrating_edit.html
+++ b/flaskr/templates/moodrating_edit.html
@@ -36,7 +36,7 @@
         <div class="entrydetails">
             <div class="notes">
                 <p>Notes</p>
-                <textarea rows="17" cols="50" name="entrytext">{{ getEntry.journal }}</textarea>
+                <textarea rows="17" cols="50" name="entrytext">{{ getEntry.title }}{{ getEntry.journal }}</textarea>
             </div>
         </div>
 
