--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,700&display=swap" rel="stylesheet">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="../static/scripts/linking.js"></script>
+        <link href="../static/style.css" rel="stylesheet">
         <!-- to fill in stylesheets used -->
         {% block stylesheet %}
         {% endblock %}
@@ -20,7 +21,7 @@
     <body>
         <section id="nav-bar">
             <div class="left">
-                <a href="{{ url_for('mood_tracker') }}">moodtracker</a>
+                <a href="{{ url_for('mood_tracker') }}" class="{{ 'active' if active_page=='moodtracker' }}">moodtracker</a>
                 <a href="{{ url_for('mood_randomizer_home') }}">moodrandomizer</a>
                 <a href="{{ url_for('chat') }}">joybot</a>
             </div>
