--- a/flaskr/templates/MoodRandomizerLaugh.html
+++ b/flaskr/templates/MoodRandomizerLaugh.html
@@ -16,18 +16,30 @@
 
         <h1>Laugh</h1>
 
-        <!-- <div class = "" -->
-
         <h2>Here's something that might make you laugh: </h2>
-        <!-- <br> -->
-        <iframe width="600" height="315" src="https://www.youtube.com/embed/LJrvJPz4nM0">
-        </iframe>
-        <br>
+        <!-- <iframe width="600" height="315" src="https://www.youtube.com/embed/LJrvJPz4nM0"> </iframe> -->
         <br>
 
+        {% if media == "Video" %}
+            <!-- <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/8421388&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/michael-ottosson" title="Michael Ottosson" target="_blank" style="color: #cccccc; text-decoration: none;">Michael Ottosson</a> · <a href="https://soundcloud.com/michael-ottosson/claire-du-lune" title="Clair de Lune" target="_blank" style="color: #cccccc; text-decoration: none;">Clair de Lune</a></div>
+         -->
+        
+            <iframe width="600" height="315" src={{link}}></iframe>
+    
+        {% elif media == "Image" %}
+            <h2>{{title}}</h2>
+            <img src={{link}} style="width:500px;height:315px;" alt="alternatetext">
+    
+        {% else %}
+            <h3 style="color:white">{{title}}</h3>
+            <p>{{link}}</p>
+    
+        {% endif %}
+         
         <div style="text-align:center;">
-            <button class="hi" type="button">Show me another!</button>
+            <button class="hi" onClick="window.location.reload();">Show me another!</button>
         </div>
+
     </div>
 
 {% endblock %}
