--- a/flaskr/templates/moodrandrelax.html
+++ b/flaskr/templates/moodrandrelax.html
@@ -16,17 +16,29 @@
 
         <h1>Relaxed</h1>
 
-        <!-- <div class = "" -->
-
-        <h2>Sit back, relax and enjoy this!</h2>
-        <!-- <br> -->
-        <iframe width="600" height="315" src="https://www.youtube.com/embed/F4we73GHH9k">
-        </iframe>
-        <br>
+        <h2>Sit back, relax, and enjoy this!</h2>
         <br>
 
-        <button class="hi" type="button">Show me another!</button>
+        {% if media == "Video" %}
+            <!-- <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/8421388&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/michael-ottosson" title="Michael Ottosson" target="_blank" style="color: #cccccc; text-decoration: none;">Michael Ottosson</a> · <a href="https://soundcloud.com/michael-ottosson/claire-du-lune" title="Clair de Lune" target="_blank" style="color: #cccccc; text-decoration: none;">Clair de Lune</a></div>
+            -->
+        
+            <!-- <iframe width="600" height="315" src="https://www.youtube.com/embed/F4we73GHH9k"></iframe> -->
+            <iframe width="600" height="315" src={{link}}></iframe>
+    
+        {% elif media == "Image" %}
+            <h3 style="color:white">{{title}}</h3>
+            <img src={{link}} style='max-width: 100%; height: auto;'/>
 
-    </div>
+    
+        {% else %}
+            <h2>{{title}}</h2>
+            <p>{{link}}</p>
+    
+        {% endif %}         
+         
+        <div style="text-align:center;">
+            <button class="hi" onClick="window.location.reload();">Show me another!</button>
+        </div>
 
 {% endblock %}
